<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    tools:context=".presentation.activities.BookstoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bookstoreAdapterThumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="90dp"
            android:maxHeight="90dp"
            app:srcCompat="@android:color/darker_gray"
            tools:srcCompat="@drawable/book_icon"
            android:contentDescription="@string/book_cover"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookstoreAdapterTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bookstoreAdapterAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer"
                android:textColor="#696969"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bookstoreAdapterValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAllCaps="false"
                android:textColor="#696969"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/bookstoreAdapterFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/fav_descr"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <Button
            android:id="@+id/bookstoreAdapterComprar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorAccent"
            android:text="@string/buy"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>